Fix matches created via admin. Fix app leaderboard fetch
